Added : meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="identifier-url" content="https://www.axa.com/" />
+    <meta name="title" content="AXA réinventons notre métier" />
+    <meta name="description" content="Home page AXA" />
+    <meta name="abstract" content="Home page AXA" />
+    <meta name="keywords" content="AXA ASSURANCES, AXA Banque, AXA" />
+    <meta name="author" content="me" />
+    <meta name="revisit-after" content="15" />
+    <meta name="language" content="FR" />
+    <meta name="copyright" content="© 2017 AXA" />
+    <meta name="robots" content="All" />
     <title>AXA - réinventons notre métier</title>
   </head>
   <body>
