font awesome icon

--- a/strategy.html
+++ b/strategy.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Stratégie Ambition AXA</title>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="/css/master.css"> -->
   </head>
   <body>
@@ -12,18 +13,23 @@
     </nav>
 
     <main>
-      <h1>Stratégie Ambition AXA</h1>
+      <p>Stratégie Ambition AXA<p>
 
       <section>
-        <h2>Devenir la société préférée de notre secteur</h2>
+        <p>Devenir la société préférée de notre secteur</p>
+        <p><span></span> Télécharger le .pdf de la page stratégie</p>
       </section>
 
       <section>
-        <h1></h1>
+        <p>2 pilliers</p>
       </section>
 
       <section>
-        <h1></h1>
+        <p>3 Priorités</p>
+      </section>
+
+      <section>
+        <p>4 principaux objectifs financiers</p>
       </section>
 
     </main>
