--- a/strategy.html
+++ b/strategy.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <title>Stratégie Ambition AXA</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="/css/master.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
-  <body>
+  <body class="strategy">
 
     <nav>
     </nav>
