--- a/strategy.html
+++ b/strategy.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Stratégie Ambition AXA</title>
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/pages/strategy.css">
   </head>
-  <body class="strategy">
+  <body>
 
     <nav>
     </nav>
