import  img strategy

--- a/strategy.html
+++ b/strategy.html
@@ -12,23 +12,30 @@
     </nav>
 
     <main>
-      <p>Stratégie Ambition AXA<p>
+      <p class="title">Stratégie Ambition AXA<p>
 
       <section>
-        <p>Devenir la société préférée de notre secteur</p>
-        <p><span></span> Télécharger le .pdf de la page stratégie</p>
+        <p class="subtitle">Devenir la société préférée de notre secteur</p>
+
+        <p>
+          <span>
+            <img src="assets/img/strategy/arrow.png">
+          </span>
+          Télécharger le .pdf de la page stratégie
+        </p>
+
       </section>
 
       <section>
-        <p>2 pilliers</p>
+        <p class="subtitle">2 pilliers</p>
       </section>
 
       <section>
-        <p>3 Priorités</p>
+        <p class="subtitle">3 Priorités</p>
       </section>
 
       <section>
-        <p>4 principaux objectifs financiers</p>
+        <p class="subtitle">4 principaux objectifs financiers</p>
       </section>
 
     </main>
