Added: Header to HomePage

--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
     <meta name="copyright" content="© 2017 AXA" />
     <meta name="robots" content="All" />
     <title>AXA - réinventons notre métier</title>
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/pages/index.css">
   </head>
   <body>
-    <header>
+    <header class="header-nav">
+      <div class="burger-menu">
 
+      </div>
+      <img src="assets/img/common/Logo.png" class="img-header"/>
+      <div class="text-header">
+        <p class="hidden-text-header">regards</p>
+        <p class="hidden-text-header">sur</p>
+        <p>2014</p>
+      </div>
     </header>
-    <main>
+    <main class="main-page">
 
     </main>
     <footer>
