add media queries strategy

--- a/strategy.html
+++ b/strategy.html
@@ -2,6 +2,18 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta name="identifier-url" content="https://www.axa.com/" />
+    <meta name="title" content="AXA réinventons notre métier" />
+    <meta name="description" content="Home page AXA" />
+    <meta name="abstract" content="Home page AXA" />
+    <meta name="keywords" content="AXA ASSURANCES, AXA Banque, AXA" />
+    <meta name="author" content="me" />
+    <meta name="revisit-after" content="15" />
+    <meta name="language" content="FR" />
+    <meta name="copyright" content="© 2017 AXA" />
+    <meta name="robots" content="All" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Stratégie Ambition AXA</title>
 
     <link rel="stylesheet" href="assets/css/pages/strategy.css">
@@ -17,25 +29,53 @@
       <section>
         <p class="subtitle">Devenir la société préférée de notre secteur</p>
 
-        <p>
-          <span>
-            <img src="assets/img/strategy/arrow.png">
-          </span>
-          Télécharger le .pdf de la page stratégie
-        </p>
+        <div class="subtitle-icon">
+          <img src="assets/img/strategy/arrow.png">
+          <p class="subtitle-icon">Télécharger le .pdf de la page stratégie</p>
+        </div>
 
       </section>
 
       <section>
         <p class="subtitle">2 pilliers</p>
+
+        <div class="pilliers">
+          <button><img src="assets/img/strategy/pillier-1.png" alt="Orientation client"></button>
+          <button><img src="assets/img/strategy/pillier-2.png" alt="Culture de connaissance et de réussite"></button>
+        </div>
+
       </section>
 
       <section>
         <p class="subtitle">3 Priorités</p>
+
+        <div class="priority">
+          <figure>
+            <img src="assets/img/strategy/priorite-1.png"/>
+            <figcaption>Se concentrer sur les activités les plus profitables et gérer le capital avec avec agilité</figcaption>
+          </figure>
+
+          <figure>
+            <img src="assets/img/strategy/priorite-2.png" alt="priorité accéleration">
+            <figcaption>Se développer sur les marchés à forte croissance, les segments porteurs et progresser fortement sur le direct</figcaption>
+          </figure>
+
+          <figure>
+            <img src="assets/img/strategy/priorite-3.png" alt="priorité efficacité">
+            <figcaption>Maitriser les coûts et améliorer la productivité pour réaliser 1,9 milliards d'économie à objectif 2015</figcaption>
+          </figure>
+
+
+        </div>
       </section>
 
       <section>
         <p class="subtitle">4 principaux objectifs financiers</p>
+
+        <div class="subtitle-icon">
+          <img src="assets/img/strategy/stats.png">
+          <p class="subtitle-icon">+5% à +10% /an de croissance du résultat opérationnel sur 5 ans</p>
+        </div>
       </section>
 
     </main>
