--- a/strategy.html
+++ b/strategy.html
@@ -12,7 +12,8 @@
     <meta name="language" content="FR" />
     <meta name="copyright" content="© 2017 AXA" />
     <meta name="robots" content="All" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0" />
 
     <title>Stratégie Ambition AXA</title>
 
@@ -29,8 +30,8 @@
       <section>
         <p class="subtitle">Devenir la société préférée de notre secteur</p>
 
-        <div class="subtitle-icon">
-          <img src="assets/img/strategy/arrow.png">
+        <div>
+          <img src="assets/img/strategy/arrow.png" alt="telecharger le pdf">
           <p class="subtitle-icon">Télécharger le .pdf de la page stratégie</p>
         </div>
 
@@ -40,8 +41,25 @@
         <p class="subtitle">2 pilliers</p>
 
         <div class="pilliers">
-          <button><img src="assets/img/strategy/pillier-1.png" alt="Orientation client"></button>
-          <button><img src="assets/img/strategy/pillier-2.png" alt="Culture de connaissance et de réussite"></button>
+          <button>
+            <img src="assets/img/strategy/pillier-1.png" alt="Orientation client"
+            srcset="
+            assets/img/strategy/mobile/pillier-1-109.png 109w,
+            assets/img/strategy/mobile/pillier-1-164.png 164w"
+            sizes="
+                (max-width: 508px) 20vw,
+                (max-width: 1020px) 20vw,
+                218px">
+          </button>
+          <button>
+            <img src="assets/img/strategy/pillier-2.png" alt="Culture de connaissance et de réussite"
+            srcset="
+            assets/img/strategy/mobile/pillier-2-109.png 109w,
+            assets/img/strategy/mobile/pillier-2-164.png 164w"
+            sizes="
+                (max-width: 508px) 20vw,
+                (max-width: 1020px) 20vw,
+                218px"></button>
         </div>
 
       </section>
@@ -49,19 +67,43 @@
       <section>
         <p class="subtitle">3 Priorités</p>
 
-        <div class="priority">
+        <div>
           <figure>
-            <img src="assets/img/strategy/priorite-1.png"/>
+            <img src="assets/img/strategy/priorite-1.png" alt="priority"
+            srcset="
+            assets/img/strategy/mobile/priorite-1-48.png 48w,
+            assets/img/strategy/mobile/priorite-1-95.png 95w,
+            assets/img/strategy/mobile/priorite-1-143.png 143w"
+            sizes="
+                (max-width: 508px) 20vw,
+                (max-width: 1020px) 20vw,
+                190px">
             <figcaption>Se concentrer sur les activités les plus profitables et gérer le capital avec avec agilité</figcaption>
           </figure>
 
           <figure>
-            <img src="assets/img/strategy/priorite-2.png" alt="priorité accéleration">
+            <img src="assets/img/strategy/priorite-2.png" alt="priorité accéleration"
+            srcset="
+            assets/img/strategy/mobile/priorite-2-48.png 48w,
+            assets/img/strategy/mobile/priorite-2-95.png 95w,
+            assets/img/strategy/mobile/priorite-2-143.png 143w"
+            sizes="
+                (max-width: 508px) 20vw,
+                (max-width: 1020px) 20vw,
+                190px">
             <figcaption>Se développer sur les marchés à forte croissance, les segments porteurs et progresser fortement sur le direct</figcaption>
           </figure>
 
           <figure>
-            <img src="assets/img/strategy/priorite-3.png" alt="priorité efficacité">
+            <img src="assets/img/strategy/priorite-3.png" alt="priorité efficacité"
+            srcset="
+            assets/img/strategy/mobile/priorite-3-48.png 48w,
+            assets/img/strategy/mobile/priorite-3-95.png 95w,
+            assets/img/strategy/mobile/priorite-3-143.png 143w"
+            sizes="
+                (max-width: 508px) 20vw,
+                (max-width: 1020px) 20vw,
+                190px">
             <figcaption>Maitriser les coûts et améliorer la productivité pour réaliser 1,9 milliards d'économie à objectif 2015</figcaption>
           </figure>
 
@@ -72,9 +114,9 @@
       <section>
         <p class="subtitle">4 principaux objectifs financiers</p>
 
-        <div class="subtitle-icon">
-          <img src="assets/img/strategy/stats.png">
-          <p class="subtitle-icon">+5% à +10% /an de croissance du résultat opérationnel sur 5 ans</p>
+        <div>
+          <img src="assets/img/strategy/stats.png" alt="objectifs">
+          <p>+5% à +10% /an de croissance du résultat opérationnel sur 5 ans</p>
         </div>
       </section>
 
