--- a/strategy.html
+++ b/strategy.html
@@ -30,7 +30,7 @@
       <section>
         <p class="subtitle">Devenir la société préférée de notre secteur</p>
 
-        <div>
+        <div class="infos">
           <img src="assets/img/strategy/arrow.png" alt="telecharger le pdf">
           <p class="subtitle-icon">Télécharger le .pdf de la page stratégie</p>
         </div>
@@ -114,9 +114,24 @@
       <section>
         <p class="subtitle">4 principaux objectifs financiers</p>
 
-        <div>
+        <div class="infos">
           <img src="assets/img/strategy/stats.png" alt="objectifs">
           <p>+5% à +10% /an de croissance du résultat opérationnel sur 5 ans</p>
+        </div>
+
+        <div class="infos">
+          <img src="assets/img/strategy/euro.png" alt="objectifs">
+          <p>24 Mds € cumulés de cash-flow opérationnel disponibles pour 2015 <span>(en 15 milliards d'euros)</span></p>
+        </div>
+
+        <div class="infos">
+          <img src="assets/img/strategy/stat-with-line.png" alt="objectifs">
+          <p>13% à 15% de rentabilité courante des capitaux propres sur 5 ans <span>(ROE courant)</span></p>
+        </div>
+
+        <div class="infos">
+          <img src="assets/img/strategy/percentage.png" alt="objectifs">
+          <p> 25% de ratio d’endettement pour 2015 .</p>
         </div>
       </section>
 
