--- a/strategy.html
+++ b/strategy.html
@@ -40,8 +40,7 @@
       <section>
         <p class="subtitle">2 pilliers</p>
 
-        <div class="pilliers">
-          <button>
+        <div>
             <img src="assets/img/strategy/pillier-1.png" alt="Orientation client"
             srcset="
             assets/img/strategy/mobile/pillier-1-109.png 109w,
@@ -50,8 +49,7 @@
                 (max-width: 508px) 20vw,
                 (max-width: 1020px) 20vw,
                 218px">
-          </button>
-          <button>
+
             <img src="assets/img/strategy/pillier-2.png" alt="Culture de connaissance et de réussite"
             srcset="
             assets/img/strategy/mobile/pillier-2-109.png 109w,
@@ -59,7 +57,7 @@
             sizes="
                 (max-width: 508px) 20vw,
                 (max-width: 1020px) 20vw,
-                218px"></button>
+                218px">
         </div>
 
       </section>
@@ -117,6 +115,7 @@
         <div class="infos">
           <img src="assets/img/strategy/stats.png" alt="objectifs">
           <p>+5% à +10% /an de croissance du résultat opérationnel sur 5 ans</p>
+          <img src="assets/img/strategy/objectifs-1.png" alt="objectifs image">
         </div>
 
         <div class="infos">
