--- a/documents.html
+++ b/documents.html
@@ -26,7 +26,7 @@
         <li><label for="cahier">Cahier "protéger ce qui nous est essentiel"</label>
           <span>1,2 Mo</span>
           <input id="cahier" class="box-check" type="checkbox">
-          <div class="hexagon"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+          <div class="hexagon"><span></span></div>
 
         </li>
         <li><label>Entretien avec Henri de castries</label>
