Avancement page document

--- a/documents.html
+++ b/documents.html
@@ -19,69 +19,67 @@
     <h2>Rapport personnalisé</h2>
     <p>
       Télécharger ci-dessous le document personnalisé à partir de l’édition papier du
-      <span> rapport d'activité et de responsabilité d'entreprise 2014</span></p>
+      <span> rapport d'activité et de responsabilité d'entreprise 2014</span>
     </p>
     <form method="post" action="">
       <ul class="listeDownload">
         <li><label for="cahier">Cahier "protéger ce qui nous est essentiel"</label>
-          <span>1,2 Mo</span>
-          <input id="cahier" class="box-check" type="checkbox">
           <div class="hexagon"><span></span></div>
-
+          <input id="cahier" class="box-check" type="checkbox">
+          <span>1,2 Mo</span>
         </li>
         <li><label>Entretien avec Henri de castries</label>
-          <span>950 Ko</span>
-          <input type="checkbox">
           <div class="hexagon"><span></span></div>
+          <input type="checkbox">
+          <span>950 Ko</span>
         </li>
         <li class="deroulant"><label>Notre groupe</label>
+          <div class="hexagon"><span></span></div>
+          <input type="checkbox">
           <span>1,6 Mo</span>
-          <input type="checkbox">
-          <div class="hexagon"><span></span></div>
-        </li>
-        <li class="sous-menu">
-          <ul >
-            <li><label>Notre métier</label>
-              <span>264 Ko</span>
-              <input type="checkbox">
-              <div class="hexagon"><span></span></div>
-            </li>
-            <li><label>Profil</label>
-              <span>176 Ko</span>
-              <input type="checkbox">
-              <div class="hexagon"><span></span></div>
-            </li>
-            <li><label>Faits marquants</label>
-              <span>708 Ko</span>
-              <input type="checkbox">
-              <div class="hexagon"><span></span></div>
-            </li>
-            <li><label>Résultats</label>
-              <span>315 Ko</span>
-              <input type="checkbox">
-              <div class="hexagon"><span></span></div>
-            </li>
-            <li><label>Gouvernance</label>
-              <span>415 Ko</span>
-              <input type="checkbox">
-              <div class="hexagon"><span></span></div>
-            </li>
-          </ul>
-        </li>
+
+            <ul class="sous-menu">
+              <li><label>Notre métier</label>
+                <div class="hexagon-little"><span></span></div>
+                <input type="checkbox">
+                <span>264 Ko</span>
+              </li>
+              <li><label>Profil</label>
+                <div class="hexagon-little"><span></span></div>
+                <input type="checkbox">
+                <span>176 Ko</span>
+              </li>
+              <li><label>Faits marquants</label>
+                <div class="hexagon-little"><span></span></div>
+                <input type="checkbox">
+                <span>708 Ko</span>
+              </li>
+              <li><label>Résultats</label>
+                <div class="hexagon-little"><span></span></div>
+                <input type="checkbox">
+                <span>315 Ko</span>
+              </li>
+              <li><label>Gouvernance</label>
+                <div class="hexagon-little"><span></span></div>
+                <input type="checkbox">
+                <span>415 Ko</span>
+              </li>
+            </ul>
+          </li>
         <li><label>Notre stratégie</label>
-          <span>2,1 Mo</span>
-          <input type="checkbox">
           <div class="hexagon"><span></span></div>
+          <input type="checkbox">
+          <span>2,1 Mo</span>
         </li>
         <li><label>Nos Activités</label>
-          <span>3,4 Mo</span>
-          <input type="checkbox">
           <div class="hexagon"><span></span></div>
+          <input type="checkbox">
+          <span>3,4 Mo</span>
         </li>
         <li><label>Nos responsabilité d'entrprise</label>
-          <span>2,3 Mo</span>
-          <input type="checkbox">
           <div class="hexagon"><span></span></div>
+          <input type="checkbox">
+          <span>2,3 Mo</span>
         </li>
       </ul>
       <button type="submit" class="btnSubmit">  <div class="hexagon"><span></span></div> Télécharger <span>6,2 Mo</span></button>
