--- a/strategy.html
+++ b/strategy.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Home page AXA" />
     <meta name="abstract" content="Home page AXA" />
     <meta name="keywords" content="AXA ASSURANCES, AXA Banque, AXA" />
-    <meta name="author" content="me" />
+    <meta name="author" content="lpdw" />
     <meta name="revisit-after" content="15" />
     <meta name="language" content="FR" />
     <meta name="copyright" content="© 2017 AXA" />
@@ -18,58 +18,60 @@
     <title>Stratégie Ambition AXA</title>
 
     <link rel="stylesheet" href="assets/css/pages/strategy.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
   </head>
   <body>
 
-    <nav>
-    </nav>
+    <nav></nav>
 
     <main>
-      <p class="title">Stratégie Ambition AXA<p>
+
+      <h1 class="title">Stratégie Ambition AXA</h1>
 
       <section>
-        <p class="subtitle">Devenir la société préférée de notre secteur</p>
+        <h2 class="subtitle">Devenir la société préférée de notre secteur</h2>
 
         <div class="infos">
-          <img src="assets/img/strategy/arrow.png" alt="telecharger le pdf">
-          <p class="subtitle-icon">Télécharger le .pdf de la page stratégie</p>
+          <div>
+            <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+              <path id="Polygone" data-name="Polygone" class="polygone" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+            </svg>
+
+
+            <p>Télécharger le .pdf de la page stratégie</p>
+          </div>
+
+
+          <div class="hexagon-strategy hexagon-xs">
+
+          </div>
+
         </div>
 
       </section>
 
       <section>
-        <p class="subtitle">2 pilliers</p>
+        <h2 class="subtitle">2 pilliers</h2>
 
         <div>
-            <img src="assets/img/strategy/pillier-1.png" alt="Orientation client"
-            srcset="
-            assets/img/strategy/mobile/pillier-1-109.png 109w,
-            assets/img/strategy/mobile/pillier-1-164.png 164w"
-            sizes="
-                (max-width: 508px) 20vw,
-                (max-width: 1020px) 20vw,
-                218px">
+          <div class="hexagon-strategy hexagon-xl">
+            <p>Orientation client</p>
+          </div>
 
-            <img src="assets/img/strategy/pillier-2.png" alt="Culture de connaissance et de réussite"
-            srcset="
-            assets/img/strategy/mobile/pillier-2-109.png 109w,
-            assets/img/strategy/mobile/pillier-2-164.png 164w"
-            sizes="
-                (max-width: 508px) 20vw,
-                (max-width: 1020px) 20vw,
-                218px">
+          <div class="hexagon-strategy hexagon-xl">
+            <p>Culture de connaissance et de réussite</p>
+          </div>
         </div>
 
       </section>
 
       <section>
-        <p class="subtitle">3 Priorités</p>
+        <h2 class="subtitle">3 Priorités</h2>
 
         <div>
           <figure>
             <img src="assets/img/strategy/priorite-1.png" alt="priority"
             srcset="
-            assets/img/strategy/mobile/priorite-1-48.png 48w,
             assets/img/strategy/mobile/priorite-1-95.png 95w,
             assets/img/strategy/mobile/priorite-1-143.png 143w"
             sizes="
@@ -110,26 +112,34 @@
       </section>
 
       <section>
-        <p class="subtitle">4 principaux objectifs financiers</p>
+        <h2 class="subtitle">4 principaux objectifs financiers</h2>
 
         <div class="infos">
-          <img src="assets/img/strategy/stats.png" alt="objectifs">
+          <div class="hexagon-strategy hexagon-xs">
+            <img src="assets/img/strategy/stat.png" alt="stats">
+          </div>
           <p>+5% à +10% /an de croissance du résultat opérationnel sur 5 ans</p>
-          <img src="assets/img/strategy/objectifs-1.png" alt="objectifs image">
+          <!-- <img src="assets/img/strategy/objectifs-1.png" alt="objectifs image"> -->
         </div>
 
         <div class="infos">
-          <img src="assets/img/strategy/euro.png" alt="objectifs">
+          <div class="hexagon-strategy hexagon-xs">
+            <!-- <img src="assets/img/strategy/euro.png" alt="euro"> -->
+          </div>
           <p>24 Mds € cumulés de cash-flow opérationnel disponibles pour 2015 <span>(en 15 milliards d'euros)</span></p>
         </div>
 
         <div class="infos">
-          <img src="assets/img/strategy/stat-with-line.png" alt="objectifs">
+          <div class="hexagon-strategy hexagon-xs">
+            <!-- <img src="assets/img/strategy/stat-with-line.png" alt="stat-with-line"> -->
+          </div>
           <p>13% à 15% de rentabilité courante des capitaux propres sur 5 ans <span>(ROE courant)</span></p>
         </div>
 
         <div class="infos">
-          <img src="assets/img/strategy/percentage.png" alt="objectifs">
+          <div class="hexagon-strategy hexagon-xs">
+            <!-- <img src="assets/img/strategy/percentage.png" alt="percentage"> -->
+          </div>
           <p> 25% de ratio d’endettement pour 2015 .</p>
         </div>
       </section>
