hexagon responsive with text center

--- a/strategy.html
+++ b/strategy.html
@@ -32,113 +32,99 @@
         <h2 class="subtitle">Devenir la société préférée de notre secteur</h2>
 
         <div class="infos">
-          <div>
-            <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
-              <path id="Polygone" data-name="Polygone" class="polygone" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
-            </svg>
-
-
+            <div class="svg-container">
+              <svg width="50" height="50" viewBox="0 0 300 300" preserveAspectRatio="xMinYMin meet">
+                <path data-name="Polygone" class="icon" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+              </svg>
+              <img src="assets/img/strategy/arrow-down.png" alt="donwload" class="arrow"/>
+            </div>
             <p>Télécharger le .pdf de la page stratégie</p>
-          </div>
-
-
-          <div class="hexagon-strategy hexagon-xs">
-
-          </div>
-
         </div>
 
       </section>
 
       <section>
         <h2 class="subtitle">2 pilliers</h2>
+        <figure class="pillier">
+          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+            <path data-name="polygone" class="polygone" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+          </svg>
+          <figcaption>Orientation client</figcaption>
+        </figure>
 
-        <div>
-          <div class="hexagon-strategy hexagon-xl">
-            <p>Orientation client</p>
-          </div>
-
-          <div class="hexagon-strategy hexagon-xl">
-            <p>Culture de connaissance et de réussite</p>
-          </div>
-        </div>
+        <figure class="pillier">
+          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+            <path data-name="polygone" class="polygone" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+          </svg>
+          <figcaption>Culture de connaissance et de réussite</figcaption>
+        </figure>
 
       </section>
 
       <section>
         <h2 class="subtitle">3 Priorités</h2>
+        <figure class="priority">
+          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+            <path data-name="polygone" class="priority-1" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+          </svg>
+          <figcaption>Se concentrer sur les activités les plus profitables et gérer le capital avec avec agilité</figcaption>
+        </figure>
 
-        <div>
-          <figure>
-            <img src="assets/img/strategy/priorite-1.png" alt="priority"
-            srcset="
-            assets/img/strategy/mobile/priorite-1-95.png 95w,
-            assets/img/strategy/mobile/priorite-1-143.png 143w"
-            sizes="
-                (max-width: 508px) 20vw,
-                (max-width: 1020px) 20vw,
-                190px">
-            <figcaption>Se concentrer sur les activités les plus profitables et gérer le capital avec avec agilité</figcaption>
-          </figure>
+        <figure class="priority">
+          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+            <path data-name="polygone" class="priority-2" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+          </svg>
+          <figcaption>Se développer sur les marchés à forte croissance, les segments porteurs et progresser fortement sur le direct</figcaption>
+        </figure>
 
-          <figure>
-            <img src="assets/img/strategy/priorite-2.png" alt="priorité accéleration"
-            srcset="
-            assets/img/strategy/mobile/priorite-2-48.png 48w,
-            assets/img/strategy/mobile/priorite-2-95.png 95w,
-            assets/img/strategy/mobile/priorite-2-143.png 143w"
-            sizes="
-                (max-width: 508px) 20vw,
-                (max-width: 1020px) 20vw,
-                190px">
-            <figcaption>Se développer sur les marchés à forte croissance, les segments porteurs et progresser fortement sur le direct</figcaption>
-          </figure>
-
-          <figure>
-            <img src="assets/img/strategy/priorite-3.png" alt="priorité efficacité"
-            srcset="
-            assets/img/strategy/mobile/priorite-3-48.png 48w,
-            assets/img/strategy/mobile/priorite-3-95.png 95w,
-            assets/img/strategy/mobile/priorite-3-143.png 143w"
-            sizes="
-                (max-width: 508px) 20vw,
-                (max-width: 1020px) 20vw,
-                190px">
-            <figcaption>Maitriser les coûts et améliorer la productivité pour réaliser 1,9 milliards d'économie à objectif 2015</figcaption>
-          </figure>
-
-
-        </div>
+        <figure class="priority">
+          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+            <path data-name="polygone" class="priority-3" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+          </svg>
+          <figcaption>Maitriser les coûts et améliorer la productivité pour réaliser 1,9 milliards d'économie à objectif 2015</figcaption>
+        </figure>
       </section>
 
       <section>
         <h2 class="subtitle">4 principaux objectifs financiers</h2>
 
         <div class="infos">
-          <div class="hexagon-strategy hexagon-xs">
-            <img src="assets/img/strategy/stat.png" alt="stats">
+          <div class="svg-container">
+            <svg width="50" height="50" viewBox="0 0 300 300" preserveAspectRatio="xMinYMin meet">
+              <path data-name="Polygone" class="icon" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+            </svg>
+            <img src="assets/img/strategy/stat.png" alt="stat" class="stat"/>
           </div>
           <p>+5% à +10% /an de croissance du résultat opérationnel sur 5 ans</p>
-          <!-- <img src="assets/img/strategy/objectifs-1.png" alt="objectifs image"> -->
         </div>
 
         <div class="infos">
-          <div class="hexagon-strategy hexagon-xs">
-            <!-- <img src="assets/img/strategy/euro.png" alt="euro"> -->
+          <div class="svg-container">
+            <svg width="50" height="50" viewBox="0 0 300 300" preserveAspectRatio="xMinYMin meet">
+              <path data-name="Polygone" class="icon" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+            </svg>
+            <img src="assets/img/strategy/euro.png" alt="euro" class="euro"/>
           </div>
           <p>24 Mds € cumulés de cash-flow opérationnel disponibles pour 2015 <span>(en 15 milliards d'euros)</span></p>
         </div>
 
         <div class="infos">
-          <div class="hexagon-strategy hexagon-xs">
-            <!-- <img src="assets/img/strategy/stat-with-line.png" alt="stat-with-line"> -->
+          <div class="svg-container">
+            <svg width="50" height="50" viewBox="0 0 300 300" preserveAspectRatio="xMinYMin meet">
+              <path data-name="Polygone" class="icon" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+            </svg>
+            <img src="assets/img/strategy/stat.png" alt="stat" class="stat"/>
+            <img src="assets/img/strategy/line.png" alt="line" class="line"/>
           </div>
           <p>13% à 15% de rentabilité courante des capitaux propres sur 5 ans <span>(ROE courant)</span></p>
         </div>
 
         <div class="infos">
-          <div class="hexagon-strategy hexagon-xs">
-            <!-- <img src="assets/img/strategy/percentage.png" alt="percentage"> -->
+          <div class="svg-container">
+            <svg width="50" height="50" viewBox="0 0 300 300" preserveAspectRatio="xMinYMin meet">
+              <path data-name="Polygone" class="icon" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+            </svg>
+            <img src="assets/img/strategy/percentage.png" alt="percentage" class="percentage"/>
           </div>
           <p> 25% de ratio d’endettement pour 2015 .</p>
         </div>
