hexagon responsive with text center

--- a/strategy.html
+++ b/strategy.html
@@ -45,44 +45,61 @@
 
       <section>
         <h2 class="subtitle">2 pilliers</h2>
-        <figure class="pillier">
-          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
-            <path data-name="polygone" class="polygone" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
-          </svg>
-          <figcaption>Orientation client</figcaption>
-        </figure>
 
-        <figure class="pillier">
-          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
-            <path data-name="polygone" class="polygone" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
-          </svg>
-          <figcaption>Culture de connaissance et de réussite</figcaption>
-        </figure>
+        <div class="has-big-hexa">
+          <div>
+            <figure class="pillier">
+              <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+                <path data-name="polygone" class="pillier-1" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+              </svg>
+              <figcaption>Orientation client</figcaption>
+            </figure>
+          </div>
 
+          <div>
+            <figure class="pillier">
+              <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+                <path data-name="polygone" class="pillier-2" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+              </svg>
+              <figcaption>Culture de connaissance et de réussite</figcaption>
+            </figure>
+          </div>
+        </div>
       </section>
 
       <section>
         <h2 class="subtitle">3 Priorités</h2>
-        <figure class="priority">
-          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
-            <path data-name="polygone" class="priority-1" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
-          </svg>
-          <figcaption>Se concentrer sur les activités les plus profitables et gérer le capital avec avec agilité</figcaption>
-        </figure>
+        <div class="has-big-hexa">
+          <div>
+            <figure class="priority">
+              <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+                <path data-name="polygone" class="priority-1" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+              </svg>
+              <figcaption>Séléctivité</figcaption>
+            </figure>
+            <p>Se concentrer sur les activités les plus profitables et gérer le capital avec avec agilité</p>
+          </div>
 
-        <figure class="priority">
-          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
-            <path data-name="polygone" class="priority-2" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
-          </svg>
-          <figcaption>Se développer sur les marchés à forte croissance, les segments porteurs et progresser fortement sur le direct</figcaption>
-        </figure>
+          <div>
+            <figure class="priority">
+              <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+                <path data-name="polygone" class="priority-2" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+              </svg>
+              <figcaption>Accélération</figcaption>
+            </figure>
+            <p>Se développer sur les marchés à forte croissance, les segments porteurs et progresser fortement sur le direct</p>
+          </div>
 
-        <figure class="priority">
-          <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
-            <path data-name="polygone" class="priority-3" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
-          </svg>
-          <figcaption>Maitriser les coûts et améliorer la productivité pour réaliser 1,9 milliards d'économie à objectif 2015</figcaption>
-        </figure>
+          <div>
+            <figure class="priority">
+              <svg width="218.25" height="251.781" viewBox="0 0 218.25 251.781">
+                <path data-name="polygone" class="priority-3" d="M911.612,530.194l-108.489,62.8L694.511,530.407l-0.123-125.386,108.489-62.8,108.612,62.587Z" transform="translate(-693.875 -341.719)"/>
+              </svg>
+              <figcaption>Accélération</figcaption>
+            </figure>
+            <p>Maitriser les coûts et améliorer la productivité pour réaliser 1,9 milliards d'économie à objectif 2015</p>
+          </div>
+      </div>
       </section>
 
       <section>
